Increase social media icon width and prevent wrapping with white-space: nowrap

--- a/css/override.css
+++ b/css/override.css
@@ -44,6 +44,10 @@ hr {
   opacity: 0.3;
 }
 
+#share-buttons {
+  white-space: nowrap;
+}
+
 #share-buttons > div {
   width: 50px;
 }
